# dudect-rs

./: .gitignore  Cargo.toml  Readme.md  flake.nix  rust-toolchain.toml
src/: constant_simple.rs  dudect.rs  not_constant_simple.rs  statistics.rs
